--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Python for Linux System Administration</h1>
-        <p></p>
+        <p>Fernando Duran</p>
       </header>
 
       <div id="banner">
@@ -39,30 +39,53 @@
         <ul></ul>
       </nav>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="python-for-linux-sysadmin" class="anchor" href="#python-for-linux-sysadmin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Python for Linux Sysadmin</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<ul>
+<li>Aimed at Linux sysadmins with knowledge of Bash or Perl that are learning Python or developers wanting to perform system administration or automate Linux stuff with Python</li>
+<li>Based on Python 2.7</li>
+<li>Examples based on usage of the Python modules that are most useful for sysadmin work</li>
+</ul>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<h2>
+<a id="basic-modules" class="anchor" href="#basic-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic Modules</h2>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<ul>
+<li>Interacting with the Operating System: <a href="https://docs.python.org/2/library/os.html">os</a>
+</li>
+<li>Interactign with the Interpreter (gettign args for ex) <a href="https://docs.python.org/2/library/sys.html">sys</a>
+</li>
+<li>Executing Linux commands: <a href="https://docs.python.org/2/library/subprocess.html">subprocess</a>
+</li>
+<li>High Level File Operations <a href="https://docs.python.org/2/library/shutil.html">shutil</a>
+</li>
+<li>Command line options <a href="https://docs.python.org/2/library/argparse.html">argparse</a>
+</li>
+<li>Config file parser <a href="https://docs.python.org/2/library/configparser.html">ConfigParser</a>
+</li>
+<li>Logging <a href="https://docs.python.org/2/library/logging.html">logging</a>
+</li>
+<li>Network connections <a href="https://docs.python.org/2/library/socket.html">socket</a>
+</li>
+</ul>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<h2>
+<a id="other-modules" class="anchor" href="#other-modules" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other Modules</h2>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Send mail with <a href="https://docs.python.org/2/library/smtplib.html">smtplib</a>
+</li>
+<li>datetime</li>
+<li>itertools</li>
+<li>paramiko</li>
+<li>daemon</li>
+<li>filecmp</li>
+<li>fnmatch</li>
+<li>glob</li>
+<li>csv</li>
+<li>requests</li>
+</ul>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/fduran">fduran</a></p>
